--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.3.12",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.9.3"
   }
 }
