--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "config": "^3.3.12",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
