--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.12",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3"
   }
 }
